--- a/package.json
+++ b/package.json
@@ -2,20 +2,21 @@
   "name": "rock-design",
   "version": "0.0.1",
   "description": "rockontrol ui",
-  "main": "lib/index.js",
   "keywords": [
     "Component",
     "UI",
     "React",
     "TypeScript"
   ],
+  "license": "MIT",
+  "author": "tangkan",
+  "main": "lib/index.js",
   "scripts": {
     "build": "rollup -c",
     "clean": "rimraf ./dist",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "pretty-quick": "pretty-quick"
   },
-  "author": "tangkan",
-  "license": "MIT",
   "browserslist": [
     "> 0.5%",
     "last 2 versions",
@@ -24,6 +25,11 @@
     "IE 11",
     "not IE 10"
   ],
+  "dependencies": {
+    "antd": "^4.22.2",
+    "react": "^18.2.0",
+    "typescript": "^4.7.4"
+  },
   "devDependencies": {
     "@babel/core": "^7.18.9",
     "@babel/preset-env": "^7.18.9",
@@ -40,6 +46,8 @@
     "less": "^4.1.3",
     "less-plugin-npm-import": "^2.1.0",
     "postcss": "^8.4.14",
+    "prettier": "^2.7.1",
+    "pretty-quick": "^3.1.3",
     "rollup": "^2.77.3",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-filesize": "^9.1.2",
@@ -47,11 +55,6 @@
     "rollup-plugin-less": "^1.1.3",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-terser": "^7.0.2"
-  },
-  "dependencies": {
-    "antd": "^4.22.2",
-    "react": "^18.2.0",
-    "typescript": "^4.7.4"
   },
   "peerDependencies": {
     "react-dom": ">=16.9.0"
