--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "author": "tangkan",
   "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "scripts": {
     "build": "rollup -c",
     "clean": "rimraf ./dist",
@@ -50,6 +51,7 @@
     "pretty-quick": "^3.1.3",
     "rollup": "^2.77.3",
     "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-dts": "^4.2.2",
     "rollup-plugin-filesize": "^9.1.2",
     "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-less": "^1.1.3",
