--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/react-dom": "^18.0.6",
     "@umijs/fabric": "^3.0.0",
     "acorn-jsx": "^5.3.2",
+    "classnames": "^2.3.1",
     "husky": "^8.0.1",
     "less": "^4.1.3",
     "less-plugin-npm-import": "^2.1.0",
