--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@umijs/fabric": "^3.0.0",
     "acorn-jsx": "^5.3.2",
     "classnames": "^2.3.1",
+    "cssnano": "^5.1.13",
     "husky": "^8.0.1",
     "less": "^4.1.3",
     "less-plugin-npm-import": "^2.1.0",
